--- a/README.rdoc
+++ b/README.rdoc
@@ -1,20 +1,36 @@
 = TokyoStore
 
-Tokyo Tyrant based Rails cache store.
+Rack based Tokyo stored (FAST!) Rails session store.
+
+http://github.com/nofxx/tokyo_store
 
 
-*Playground Warning*  This is just me playing, maybe, who knows it'll be/have:
+== Require
 
-* Fast
-* TTL & Substring Matching
+Tokyo Cabinet/Tyrant:: http://tokyocabinet.sourceforge.net/
+Rufus Tokyo:: http://github.com/jmettraux/rufus-tokyo/tree
 
 
-== Got nothing better do to?
+== Install
 
-  script/plugin install..
+  gem install nofxx-tokyo_store
 
-  # session store
-  config.action_controller.session_store = :tokyo_store
+  config.gem 'nofxx-tokyo_store', :lib => 'tokyo_store'
+  ActionController::Base.session_store = Rack::Session::Tokyo
+
+
+== Run
+
+Just start tyrant
+
+  ttserver data.tch
+
+
+== Thanks
+
+Mikio Hirabayashi:: tokyo products
+John Mettraux:: rufus-tokyo
+Luca Guidi:: redis-store - Rack code stolen from here =D
 
 
 == Copyright
