--- a/README.rdoc
+++ b/README.rdoc
@@ -3,7 +3,7 @@
 Rack based Tokyo stored (FAST!) Rails session store.
 
 Code:: http://github.com/nofxx/tokyo_store
-Demo:: http://github.com/nofxx/tokyo_webapps under rails/session
+Demo:: http://github.com/nofxx/tokyo_webapps under rails/tokyo_store
 
 
 == Require
@@ -15,6 +15,8 @@ Rufus Tokyo:: http://github.com/jmettraux/rufus-tokyo
 == Install
 
   gem install nofxx-tokyo_store
+
+Rails (enviroment.rb)
 
   config.gem 'nofxx-tokyo_store', :lib => 'tokyo_store'
   ActionController::Base.session_store = Rack::Session::Tokyo
